--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -10,6 +10,8 @@ $cor-accent-rosa: #FFC7DF;
 $cor-accent-laranja: #FFBA79;
 $cor-accent-azul: #9A97ED;
 $cor-text: #000000;
+$cor-letras-menu-lateral: #595976;
+$cor-borda-icon-menu-lateral: #4F4F68;
 $gradiente-cinza-branco: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289) 100%);
 $gradiente-azul-claro-escuro: linear-gradient(180deg, #3A8FFF 0%, #0837AE 100%);
 $gradiente-roxo-branco: linear-gradient(0deg, rgba(50, 50, 89, 0.0001) 0%, #323259 72.97%);
