--- a/styles/mobile/home/style-home-mobile.scss
+++ b/styles/mobile/home/style-home-mobile.scss
@@ -10,3 +10,100 @@
     align-content: flex-start;
     justify-content: center;
 }
+
+.nav-mobile {
+    height: 128px;
+    width: 100%;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 32px;
+}
+
+.logo-mobile {
+    height: 32px;
+}
+
+.nav-menu {
+    background-color: transparent;
+    border: none;
+}
+
+.menu-laterel-mobile {
+    background-image: url('../../../imagens/mobile/home/background-menu-mobile.svg');
+    background-size:cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    position: absolute;
+    left: -100vw;
+    transition: .25s;
+}
+
+.nav-menu-fechar{
+    background-color: transparent;
+    border: none;
+}
+
+.menu-lateral-links {
+    height: 280px;
+    width: 100%;
+    margin-left: 32px;
+    align-self: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.menu-lateral-itens {
+    text-decoration: none;
+    color: $cor-letras-menu-lateral;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 40px;
+    letter-spacing: -0.5px;
+}
+
+.icons-redes-sociais {
+    width: 184px;
+    margin-left: 32px;
+    align-self: center;
+}
+
+.lista-redes-sociais {
+    display: flex;
+    justify-content: space-between;
+}
+
+.item-redes-sociais {
+    text-decoration: none;
+    background-size: 40px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid $cor-borda-icon-menu-lateral;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-lateral--ativo {
+    left: 0;
+    transition: .25s;
+    z-index: 1;
+}
+
+.nav-ativo-mobile-logo {
+    height: 128px;
+    width: 100%;
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 32px;
+}
