Adicionando o css do conteudo na home do mobile, mudando cor, tamanho formas...

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -10,6 +10,7 @@ $cor-accent-rosa: #FFC7DF;
 $cor-accent-laranja: #FFBA79;
 $cor-accent-azul: #9A97ED;
 $cor-text: #000000;
+$cor-text-secondary-shade-forte: #606060;
 $cor-letras-menu-lateral: #595976;
 $cor-borda-icon-menu-lateral: #4F4F68;
 $gradiente-cinza-branco: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289) 100%);
