--- a/styles/mobile/home/style-home-mobile.scss
+++ b/styles/mobile/home/style-home-mobile.scss
@@ -69,6 +69,14 @@
     letter-spacing: -0.5px;
 }
 
+.link-lateral-ativo {
+    color: white;
+}
+
+.menu-lateral-itens:hover {
+    color: white;
+}
+
 .icons-redes-sociais {
     width: 184px;
     margin-left: 32px;
@@ -106,4 +114,73 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 32px;
+}
+
+.informacoes-home-mobile {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 24px;
+    width: 311px;
+    height: 256px;
+    line-height: 56px;
+}
+
+.informacoes-home-mobile h3{
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 56px;
+    letter-spacing: -0.5px;
+    color: $cor-dark;
+}
+
+.informacoes-home-mobile p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: $cor-text-secondary-shade-forte;
+}
+
+.informacoes-home-mobile button {
+    font-size: 16px;
+    width: 160px;
+    height: 56px;
+    border-radius: 8px;
+    background-color: $cor-primary;
+    border: 0;
+    color: $cor-light;
+    font-family: $fonte;
+}
+
+.imagem-home-mobile {
+    align-self: flex-end;
+    position: absolute;
+}
+
+.botao-pular-pagina {
+    width: 100%;
+    margin: 0 0 32px 32px;
+    align-self: flex-end;
+    position: absolute;
+}
+
+.botao-direita {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: none;
+    background-color: transparent;
+}
+
+.botao-esquerda {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: none;
+    background-color: $cor-primary;
 }
