--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -11,6 +11,8 @@ $cor-accent-laranja: #FFBA79;
 $cor-accent-azul: #9A97ED;
 $cor-text: #000000;
 $cor-text-secondary-shade-forte: #606060;
+$cor-text-secondary-shade-fraca: #ADADAD ;
+$cor-borda-select-footer: #D8D8D8;
 $cor-letras-menu-lateral: #595976;
 $cor-borda-icon-menu-lateral: #4F4F68;
 $gradiente-cinza-branco: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%, rgba(237, 229, 240, 0.504289) 100%);
