--- a/styles/mobile/about/style-about-mobile.css
+++ b/styles/mobile/about/style-about-mobile.css
@@ -7,4 +7,140 @@
   display: grid;
   justify-items: center;
   align-items: center;
+}
+
+.content-about-mobile {
+  width: 310px;
+  display: grid;
+  grid-template-columns: 51px auto;
+  margin-top: 64px;
+  row-gap: 42px;
+}
+
+.content-about-mobile h3 {
+  color: #ADADAD;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.content-about-mobile text {
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.content-about-mobile h1 {
+  grid-column: span 2;
+  font-weight: bold;
+  color: #FFFFFF;
+  width: 226px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 48px;
+  letter-spacing: -0.4px;
+}
+
+.setas-dropbox {
+  grid-column: span 2;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.setas {
+  display: inline-flex;
+}
+
+.botao-esquerda {
+  margin-left: 16px;
+}
+
+.dropbox {
+  align-self: center;
+  justify-self: center;
+}
+
+.dropbox select {
+  border: none;
+  padding: 0 56px 0 0;
+  background-color: transparent;
+  font-size: 12px;
+  color: #FFFFFF;
+}
+
+.dropbox select option {
+  background-color: #232340;
+}
+
+.imagem-tela-about-mobile {
+  margin-top: 56px;
+  margin-bottom: 56px;
+}
+
+.quadro-about-mobile {
+  width: 311px;
+  display: grid;
+  row-gap: 40px;
+}
+
+.quadro-about-mobile h6 {
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: -0.2px;
+}
+
+.quadro-about-mobile p {
+  color: #8B8B8B;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.quadro-about-mobile a {
+  height: 56px;
+  width: 160px;
+}
+
+.quadro-about-mobile button {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  width: 160px;
+  height: 56px;
+  border-radius: 8px;
+  background-color: #5468E7;
+  border: 0;
+  color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
+}
+
+.numero-about-mobile {
+  width: 310px;
+  height: 310px;
+  border-radius: 50%;
+  box-shadow: 0px 23px 51px rgba(0, 0, 0, 0.242297);
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  justify-items: center;
+  margin-top: 56px;
+  margin-bottom: 56px;
+}
+
+.numero-about-mobile h1 {
+  color: #FFFFFF;
+  font-weight: 600;
+  font-size: 140px;
+  line-height: 167px;
+}
+
+.numero-about-mobile p {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  color: #FFFFFF;
 }/*# sourceMappingURL=style-about-mobile.css.map */
