--- a/styles/mobile/about/style-about-mobile.scss
+++ b/styles/mobile/about/style-about-mobile.scss
@@ -10,3 +10,139 @@
     justify-items: center;
     align-items: center;
 }
+
+.content-about-mobile {
+    width: 310px;
+    display: grid;
+    grid-template-columns: 51px auto;
+    margin-top: 64px;
+    row-gap: 42px;
+}
+
+.content-about-mobile h3 {
+    color: $cor-text-secondary-shade-fraca;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.content-about-mobile text {
+    color: $cor-light;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+}
+
+.content-about-mobile h1 {
+    grid-column: span 2;
+    font-weight: bold;
+    color: $cor-light;
+    width: 226px;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 48px;
+    letter-spacing: -0.4px;
+}
+
+.setas-dropbox {
+    grid-column: span 2;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.setas {
+    display: inline-flex;
+}
+
+.botao-esquerda {
+    margin-left: 16px;
+}
+
+.dropbox {
+    align-self: center;
+    justify-self: center;
+}
+
+.dropbox select {
+    border: none;
+    padding: 0 56px 0 0;
+    background-color: transparent;
+    font-size: 12px;
+    color: $cor-light;
+}
+
+.dropbox select option {
+    background-color: $cor-dark;
+}
+
+.imagem-tela-about-mobile {
+    margin-top: 56px;
+    margin-bottom: 56px;
+}
+
+.quadro-about-mobile {
+    width: 311px;
+    display: grid;
+    row-gap: 40px;
+}
+
+.quadro-about-mobile h6 {
+    color: $cor-light;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: -0.2px;
+}
+
+.quadro-about-mobile p {
+    color: $cor-text-secondary-shade-media;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+}
+
+.quadro-about-mobile a {
+    height: 56px;
+    width: 160px;
+}
+
+.quadro-about-mobile button {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    width: 160px;
+    height: 56px;
+    border-radius: 8px;
+    background-color: $cor-primary;
+    border: 0;
+    color: $cor-light;
+    font-family: $fonte;
+}
+
+.numero-about-mobile {
+    width: 310px;
+    height: 310px;
+    border-radius: 50%;
+    box-shadow: 0px 23px 51px $box-shadow-about;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    margin-top: 56px;
+    margin-bottom: 56px;
+}
+
+.numero-about-mobile h1 {
+    color: $cor-light;
+    font-weight: 600;
+    font-size: 140px;
+    line-height: 167px;
+}
+
+.numero-about-mobile p {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 24px;
+    color: $cor-light;
+}
