Adicionando cores novas

--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -20,3 +20,6 @@ $gradiente-cinza-branco: linear-gradient(360deg, rgba(255, 255, 255, 0.0001) 0%,
 $gradiente-azul-claro-escuro: linear-gradient(180deg, #3A8FFF 0%, #0837AE 100%);
 $gradiente-roxo-branco: linear-gradient(0deg, rgba(50, 50, 89, 0.0001) 0%, #323259 72.97%);
 $box-shadow-about: rgba(0, 0, 0, 0.242297);
+$box-shadow-sombra1-card: rgba($color: #FFFFFF, $alpha: 0.5);
+$box-shadow-sombra2-card: #EDEDED;
+$box-shadow-item-card: rgba(0, 0, 0, 0.30171);
