--- a/styles/mobile/home/style-home-mobile.css
+++ b/styles/mobile/home/style-home-mobile.css
@@ -322,4 +322,123 @@ footer {
   line-height: 16px;
   color: #ADADAD;
   margin-bottom: 34px;
+}
+
+.container-home {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .container-home-mobile, .container-about-mobile, .nav-mobile, .menu-laterel-mobile {
+    display: none;
+  }
+  .container-home {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    background-image: url("../../../imagens/mobile/home/responsividade/background-home.svg");
+    background-size: cover;
+    min-height: 768px;
+    flex-direction: column;
+  }
+  .informacoes-home {
+    width: 332px;
+    height: 412px;
+    margin-left: 107px;
+    margin-top: 73.5px;
+    display: grid;
+    row-gap: 26px;
+  }
+  .informacoes-home h3 {
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 72px;
+    letter-spacing: -0.5px;
+    color: #232340;
+  }
+  .informacoes-home p {
+    width: 261px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #606060;
+  }
+  .informacoes-home button {
+    width: 160px;
+    height: 56px;
+    background-color: #5468E7;
+    font-family: "Roboto", sans-serif;
+    border: none;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: #FFFFFF;
+    border-radius: 8px;
+  }
+  .nav-bar {
+    margin-top: 39.51px;
+    margin-left: 50px;
+    width: 924.2px;
+    height: 56px;
+    display: grid;
+    grid-template-columns: 127.2px auto 137.2px 160px;
+    align-items: center;
+  }
+  .notificacao {
+    height: 32.51px;
+    margin-left: 7.8px;
+  }
+  .notificacao h3 {
+    background-image: linear-gradient(180deg, #3A8FFF 0%, #0837AE 100%);
+    color: white;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+  }
+  .lista-link {
+    display: inline-flex;
+    justify-content: space-between;
+    margin-left: 162px;
+    width: 346px;
+    height: 22px;
+  }
+  .item-link a {
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: #8B8B8B;
+  }
+  .nav-bar button {
+    background: #232340;
+    border-radius: 8px;
+    border: none;
+    width: 160px;
+    height: 56px;
+    color: #FFFFFF;
+    font-family: "Roboto", sans-serif;
+  }
+  .seta-proxima {
+    width: 150px;
+    height: 44px;
+    display: grid;
+    grid-template-columns: 40px auto;
+    -moz-column-gap: 16px;
+         column-gap: 16px;
+    margin-top: 75px;
+    margin-left: 107px;
+  }
+  .seta-proxima h3 {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    color: #8B8B8B;
+  }
 }/*# sourceMappingURL=style-home-mobile.css.map */
