--- a/styles/mobile/home/style-home-mobile.scss
+++ b/styles/mobile/home/style-home-mobile.scss
@@ -325,3 +325,133 @@ footer {
     color: $cor-text-secondary-shade-fraca;
     margin-bottom: 34px;
 }
+.container-home {
+    display: none;
+}
+//responsividade
+@media screen and (min-width: 1024px) {
+    .container-home-mobile, .container-about-mobile, .nav-mobile, .menu-laterel-mobile {
+        display: none;
+    }
+
+    .container-home {
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        background-image: url('../../../imagens/mobile/home/responsividade/background-home.svg');
+        background-size: cover;
+        min-height: 768px;
+        flex-direction: column;
+    }
+
+    .informacoes-home {
+        width: 332px;
+        height: 412px;
+        margin-left: 107px;
+        margin-top: 73.5px;
+        display: grid;
+        row-gap: 26px;
+    }
+
+    .informacoes-home h3 {
+        font-weight: 700;
+        font-size: 64px;
+        line-height: 72px;
+        letter-spacing: -0.5px;
+        color: $cor-dark;
+    }
+
+    .informacoes-home p {
+        width: 261px;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 28px;
+        color: $cor-text-secondary-shade-forte;
+    }
+
+    .informacoes-home button {
+        width: 160px;
+        height: 56px;
+        background-color: $cor-primary;
+        font-family: $fonte;
+        border: none;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        color: $cor-light;
+        border-radius: 8px;
+    }
+
+    .nav-bar {
+        margin-top: 39.51px;
+        margin-left: 50px;
+        width: 924.2px;
+        height: 56px;
+        display: grid;
+        grid-template-columns: 127.2px auto 137.2px 160px;
+        align-items: center;
+    }
+
+    .notificacao {
+        height: 32.51px;
+        margin-left: 7.8px;
+    }
+
+    .notificacao h3 {
+        background-image: $gradiente-azul-claro-escuro;
+        color: white;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: center;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        display: grid;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .lista-link {
+        display: inline-flex;
+        justify-content: space-between;
+        margin-left: 162px;
+        width: 346px;
+        height: 22px;
+    }
+
+    .item-link a {
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        color: $cor-text-secondary-shade-media;
+    }
+
+    .nav-bar button {
+        background: $cor-dark;
+        border-radius: 8px;
+        border: none;
+        width: 160px;
+        height: 56px;
+        color: $cor-light;
+        font-family: $fonte;
+    }
+
+    .seta-proxima {
+        width: 150px;
+        height: 44px;
+        display: grid;
+        grid-template-columns: 40px auto;
+        column-gap: 16px;
+        margin-top: 75px;
+        margin-left: 107px;
+    }
+    
+    .seta-proxima h3 {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        color: $cor-text-secondary-shade-media;
+    }
+}
