--- a/styles/mobile/home/style-home-mobile.scss
+++ b/styles/mobile/home/style-home-mobile.scss
@@ -325,12 +325,12 @@ footer {
     color: $cor-text-secondary-shade-fraca;
     margin-bottom: 34px;
 }
-.container-home {
+.container-home, .mostrar-footer {
     display: none;
 }
 //responsividade
 @media screen and (min-width: 1024px) {
-    .container-home-mobile, .container-about-mobile, .nav-mobile, .menu-laterel-mobile {
+    .container-home-mobile, .card-footer, .card-redes-footer {
         display: none;
     }
 
@@ -454,4 +454,157 @@ footer {
         line-height: 22px;
         color: $cor-text-secondary-shade-media;
     }
+
+    .mostrar-footer {
+        display: grid;
+        justify-items: center;
+        align-items: end;
+    }
+
+    .lista-link-footer {
+        margin: 0;
+    }
+
+    .card1-footer {
+        width: 925px;
+        min-height: 728.18px;
+        background-image: url('../../../imagens/mobile/home/responsividade/card1-footer-background.svg');
+        background-size: cover;
+        display: grid;
+        justify-items: center;
+        align-items: center;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .linha-card1-footer {
+        align-self: normal;
+    }
+    .part1-card-footer {
+        display: grid;
+        justify-items: center;
+        height: 192px;
+        width: 404px;
+        align-items: center;
+    }
+
+    .part1-card-footer h4 {
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 22px;
+        text-align: center;
+        color: $cor-light;
+    }
+
+    .part1-card-footer h3 {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 32px;
+        text-align: center;
+        letter-spacing: -0.2px;
+        color: $cor-light;
+    }
+
+    .parte-baixo-card1-footer {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        margin-top: 160.26px;
+    }
+
+    .part2-card-footer h1 {
+        width: 258px;
+        font-weight: 700;
+        font-size: 48px;
+        line-height: 56px;
+        letter-spacing: -0.5px;
+        color: $cor-light;
+    }
+
+    .part3-card-footer {
+        display: grid;
+        grid-template-columns: 256px auto;
+        align-content: center;
+        height: 157.87px;
+    }
+    
+    .part3-card-footer img {
+        grid-column: span 2;
+    }
+
+    .part3-card-footer h3 {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 32px;
+        letter-spacing: -0.2px;
+        color: $cor-light;
+    }
+
+    .part3-card-footer button {
+        background-color: transparent;
+        border: none;
+    }
+
+    .card2-footer {
+        height: 340px;
+        width: 100%;
+        display: grid;
+        justify-items: center;
+        background-image: url('../../../imagens/mobile/home/responsividade/background-footer.svg');
+        background-size: cover;
+        align-items: end;
+        align-content: stretch;
+    }
+
+    .card-links-footer {
+        display: grid;
+        justify-items: center;
+        width: 506px;
+        height: 153px;
+    }
+
+    .card-links-footer p {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: center;
+        color: $cor-text-secondary-shade-fraca;
+    }
+
+    .redes-footer {
+        width: 823px;
+        height: 42px;
+        display: grid;
+        grid-template-columns: auto 81px 84px;
+        align-items: flex-end;
+        margin-bottom: 22.87px;
+        border-top: 1px solid $cor-borda-select-footer;
+    }
+
+    .lista-redes-sociais-footer {
+        width: 84px;
+        height: 12px;
+        align-items: center;
+    }
+
+    .tamanho-direito-footer {
+        height: 16px;
+        margin-bottom: 0;
+    }
+
+    .item-link-footer {
+        border: none;
+        width: auto;
+        height: auto;
+    }
+
+    .redes-footer h3 {
+        height: 16px;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        color: $cor-primary;
+    }
+
 }
